--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
         <div class="toggle toggle-soft"></div>
     <div class="hire" id="hire"><i class="fa fa-handshake-o animated swing infinite"></i>
         <div class="info display"><div class="correo">
-            <span class="ingles"><a href="mailto:contato@circuitoverde.tec.br">contato@circuitoverde.tec.br</a></span>
+            <span class="ingles"><a  style="text-decoration: none; color: white;" href="mailto:contato@circuitoverde.tec.br">contato@circuitoverde.tec.br</a></span>
         </div>
             <div class="tel"><i class="fa"></i></div>
         </div>
