--- a/templates/index.html
+++ b/templates/index.html
@@ -185,11 +185,12 @@
                 <span class="squareSubTitle">encontra por aqui</span></div>
             <div class="squareText trabajo show3 hidden">
                 <br>
-        <p></p>
-        <p class="fontemediun">🧠 Cursos de tecnologia com foco educacional e ambiental</p>
-        <p class="fontemediun">🔁 Projetos de reutilização de lixo eletrônico com Arduino e IoT</p>
-        <p class="fontemediun">🧩 Conteúdo acessível para diferentes perfis de aprendizagem</p>
-        <p class="fontemediun">🌍 Iniciativas sustentáveis e colaborativas</p>
+        <p class="fontemediun">Em breve:</p>
+        <br>
+        <p class="fontemediun">&nbsp;&nbsp;🧠 Cursos de tecnologia com foco educacional e ambiental</p>
+        <p class="fontemediun">&nbsp;&nbsp;🔁 Projetos de reutilização de lixo eletrônico com Arduino e IoT</p>
+        <p class="fontemediun">&nbsp;&nbsp;🧩 Conteúdo acessível para diferentes perfis de aprendizagem</p>
+        <p class="fontemediun">&nbsp;&nbsp;🌍 Iniciativas sustentáveis e colaborativas</p>
         <br>
         <br>
         <br>
