--- a/templates/index.html
+++ b/templates/index.html
@@ -91,10 +91,18 @@
             <div class="squareText sobreMi show1 hidden">
                 
                 <p class="fontemediun">              
-        O Circuito Verde nasceu com o propósito de transformar a tecnologia em uma ferramenta de inclusão, aprendizado e cuidado com o planeta. <br>
-        Aqui promovemos cursos, projetos e iniciativas voltadas à cultura maker, à educação tecnológica e à reciclagem criativa de eletrônicos.<br>
-        Somos uma startup educacional que une tecnologia, inclusão e sustentabilidade. <br>
+        O Circuito Verde nasceu com o propósito de transformar a tecnologia em uma ferramenta de inclusão, aprendizado e cuidado com o planeta.
+        <br>
+        <br>
+        Aqui promovemos cursos, projetos e iniciativas voltadas à cultura maker, à educação tecnológica e à reciclagem criativa de eletrônicos.
+        <br>
+        <br>
+        Somos uma startup educacional que une tecnologia, inclusão e sustentabilidade. 
+        <br>
+        <br>
         Nossa missão é democratizar o acesso à educação tecnológica, promovendo a inclusão digital e a conscientização ambiental.
+        <br>
+        <br>
         Nascemos da paixão por ensinar, inovar e criar oportunidades para todos, usando a nuvem ☁️ como ambiente principal de atuação.</p>
         <br>
         <br>
@@ -188,8 +196,11 @@
         <p class="fontemediun">Em breve:</p>
         <br>
         <p class="fontemediun">&nbsp;&nbsp;🧠 Cursos de tecnologia com foco educacional e ambiental</p>
+        <br>
         <p class="fontemediun">&nbsp;&nbsp;🔁 Projetos de reutilização de lixo eletrônico com Arduino e IoT</p>
+        <br>
         <p class="fontemediun">&nbsp;&nbsp;🧩 Conteúdo acessível para diferentes perfis de aprendizagem</p>
+        <br>
         <p class="fontemediun">&nbsp;&nbsp;🌍 Iniciativas sustentáveis e colaborativas</p>
         <br>
         <br>
@@ -209,7 +220,9 @@
             <div class="squareText trabajo show4 hidden">
                     
                     <p class="fontemediun">
-        🔧 Esta plataforma está em construção e será o ponto de partida de uma jornada rumo a uma educação mais consciente, criativa e acessível. <br>
+        🔧 Esta plataforma está em construção e será o ponto de partida de uma jornada rumo a uma educação mais consciente, criativa e acessível.
+        <br>
+        <br>
         Enquanto isso, você pode acompanhar as novidades, testar protótipos e colaborar com ideias.
                 </p>
             </div>
@@ -223,16 +236,28 @@
             <div class="squareText trabajo show3 hidden">
                 <p>
                     <p class="fontemediun"> 
-                    Somos um espaço de aprendizagem criativa com foco em ciência da computação, eletrônica, cultura Maker e reciclagem tecnológica.<br>
-                    Fomos aceitos no programa Microsoft for Startups e operamos 100% na nuvem Azure, garantindo tecnologia de ponta, escalabilidade e segurança.<br>
+                    Somos um espaço de aprendizagem criativa com foco em ciência da computação, eletrônica, cultura Maker e reciclagem tecnológica.
+                    <br>
+                    <br>
+                    Fomos aceitos no programa Microsoft for Startups e operamos 100% na nuvem Azure, garantindo tecnologia de ponta, escalabilidade e segurança.
+                    <br>
+                    <br>
                     100% Online e Acessível: <br>
-                    ✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em qualquer lugar do Brasil.<br>  
-                    Integração STEAM Completa: <br>
-                    ✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos educacionais.<br>
-                    Espaço Inclusivo: <br>
-                    Desenvolvemos conteúdos para todas as idades e perfis, garantindo que a tecnologia seja acessível para todos.<br>
-                    Protagonismo Estudantil: <br>
-                    ✅ Incentivamos nossos alunos a criarem seus próprios projetos tecnológicos com impacto real na sociedade.
+                    &nbsp;&nbsp;✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em qualquer lugar do Brasil.<br>  
+                    Integração STEAM Completa: 
+                    <br>
+                    <br>
+                   &nbsp;&nbsp; ✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos educacionais.
+                    <br>
+                    Espaço Inclusivo: 
+                    <br>
+                    <br>
+                    Desenvolvemos conteúdos para todas as idades e perfis, garantindo que a tecnologia seja acessível para todos.
+                    <br>
+                    Protagonismo Estudantil: 
+                    <br>
+                    <br>
+                    &nbsp;&nbsp;✅ Incentivamos nossos alunos a criarem seus próprios projetos tecnológicos com impacto real na sociedade.
                     </p>
                     <p></p>               
                 </p>
