--- a/templates/index.html
+++ b/templates/index.html
@@ -242,20 +242,22 @@
                     Fomos aceitos no programa Microsoft for Startups e operamos 100% na nuvem Azure, garantindo tecnologia de ponta, escalabilidade e segurança.
                     <br>
                     <br>
-                    100% Online e Acessível: <br>
-                    &nbsp;&nbsp;✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em qualquer lugar do Brasil.<br>  
+                    100% Online e Acessível: 
+                    <br>
+                    &nbsp;&nbsp;✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em qualquer lugar do Brasil.
+                    <br> 
+                    <br>
                     Integração STEAM Completa: 
                     <br>
+                    &nbsp;&nbsp; ✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos educacionais.
                     <br>
-                   &nbsp;&nbsp; ✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos educacionais.
                     <br>
                     Espaço Inclusivo: 
                     <br>
-                    <br>
                     Desenvolvemos conteúdos para todas as idades e perfis, garantindo que a tecnologia seja acessível para todos.
                     <br>
-                    Protagonismo Estudantil: 
                     <br>
+                    Protagonismo Estudantil: 
                     <br>
                     &nbsp;&nbsp;✅ Incentivamos nossos alunos a criarem seus próprios projetos tecnológicos com impacto real na sociedade.
                     </p>
