--- a/templates/index.html
+++ b/templates/index.html
@@ -244,22 +244,26 @@
                     <br>
                     100% Online e Acessível: 
                     <br>
-                    &nbsp;&nbsp;✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em qualquer lugar do Brasil.
+                    &nbsp;&nbsp;✅ Nossa plataforma funciona integralmente em nuvem, permitindo acesso de qualquer dispositivo, em 
+                    &nbsp;&nbsp;qualquer lugar do Brasil.
                     <br> 
                     <br>
                     Integração STEAM Completa: 
                     <br>
-                    &nbsp;&nbsp; ✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos educacionais.
+                    &nbsp;&nbsp;✅ Combinamos ciência, tecnologia, engenharia, artes e matemática em todos os nossos projetos 
+                    &nbsp;&nbsp;educacionais.
                     <br>
                     <br>
                     Espaço Inclusivo: 
                     <br>
-                    Desenvolvemos conteúdos para todas as idades e perfis, garantindo que a tecnologia seja acessível para todos.
+                     &nbsp;&nbsp;✅ Desenvolvemos conteúdos para todas as idades e perfis, garantindo que a tecnologia seja acessível 
+                     &nbsp;&nbsp;para todos.
                     <br>
                     <br>
                     Protagonismo Estudantil: 
                     <br>
-                    &nbsp;&nbsp;✅ Incentivamos nossos alunos a criarem seus próprios projetos tecnológicos com impacto real na sociedade.
+                    &nbsp;&nbsp;✅ Incentivamos nossos alunos a criarem seus próprios projetos tecnológicos com impacto real na 
+                    &nbsp;&nbsp;sociedade.
                     </p>
                     <p></p>               
                 </p>
