--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
             <div class="line2"></div>
             <div class="center">
                 <div class="nombre animated fadeInLeft"><p>CIR</p><p>CUI</p><p>TO</p></div>
-                <div class="iam animated fadeInLeft" >
-                <span class="ingles">VERDE</span></div>
+                <div class="iam animated fadeInLeft" style="background-color: #084622; font-color: white;" >
+                <span class="ingles" style="font-size: 20px; color: white; ">VERDE</span></div>
             </div>
         </div>
 
