--- a/templates/index.html
+++ b/templates/index.html
@@ -296,8 +296,8 @@ var idcomments_post_url;
             </div>
         </div>
     <footer style="font-size:18px">
-    &copy; Maristela 🐍 🌶️ 2025
-</footer>
+    &copy; Maristela 🐍 🌶️ 2025 | Circuito Verde
+    </footer>
     </div>
 
 <!-- partial -->
