--- a/templates/index.html
+++ b/templates/index.html
@@ -45,13 +45,6 @@
       .catch(function(err) { console.error('❌ Erro ao registrar Service Worker:', err); });
   }
 </script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "s3r2a8cks2");
-</script>
 </head>
 
 
@@ -75,13 +68,17 @@
             <div class='wave -one'></div>
             <div class='wave -two'></div>
             <div class='wave -three'></div>
+           
         </div>
             <div class="line"></div>
+            
             <div class="line2"></div>
             <div class="center">
+                 
                 <div class="nombre animated fadeInLeft"><p>CIR</p><p>CUI</p><p>TO</p></div>
-                <div class="iam animated fadeInLeft" style="background-color: #084622; font-color: white;" >
-                <span class="ingles" style="font-size: 20px; color: white; ">VERDE</span></div>
+                <div class="iam animated fadeInLeft" >
+                <span class="ingles" style="font-size: 30px; color: #084622; ">VERDE</span></div>
+                <p>Reciclando ideias, reprogramando o futuro.</p>
             </div>
         </div>
 
@@ -97,7 +94,7 @@
             <div class="squareImage show1 hidden"><img class="image yo" src="{{ url_for('static', filename='logo.png') }}" style="background-color:white;"></div>
             <div class="squareText sobreMi show1 hidden">
                 
-                <p class="fontemediun">              
+                <p class="fontemediun">
         O Circuito Verde nasceu para transformar a tecnologia em uma ferramenta de inclusão, aprendizado e cuidado com o planeta.
         <br>
         <br>
@@ -171,8 +168,8 @@
 
                     <div class="habilidad show2 hidden">
                         <div class="habilidadIcon">
-                            AZURE
-                            <img src="{{ url_for('static', filename='azure-original.svg') }}" alt="Azure logo consisting of a stylized blue cloud, representing cloud computing technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                            MYSQL
+                            <img src="{{ url_for('static', filename='mysql-original.svg') }}" alt="MySQL logo consisting of a stylized blue elephant, representing database technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
                         </div>
                         
                     </div>
@@ -234,6 +231,9 @@
         <br>
         <br>
         Enquanto isso, você pode acompanhar as novidades, testar protótipos e colaborar com ideias.
+        <br>
+        <br>
+        <br>
                 </p>
             </div>
         </div>
