--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,18 @@
         <div class="toggle toggle-soft"></div>
     <div class="hire" id="hire"><i class="fa fa-handshake-o animated swing infinite"></i>
         <div class="info display"><div class="correo">
-            <span class="ingles"><a  style="text-decoration: none; color: white;" href="mailto:contato@circuitoverde.tec.br">contato@circuitoverde.tec.br</a></span>
+            <span class="ingles"><a  style="text-decoration: none; color: white; font-size: 25px;" href="mailto:contato@circuitoverde.tec.br">maristela@circuitoverde.tec.br</a></span>
+            <span style="color: white; font-size: 8px; font-weight: bold;">
+                <br>
+                <br>
+                
+            <p>Maristela Oliveira <br>Desenvolvedora Full Stack Python</p>
+            <p>Professora de Tecnologia e Cultura Maker</p>
+            <p>Especialista em Educação Tecnológica <br> Inteligência Artificial e Análise de Dados <br> Segurança da Informação <br> Projetos de Cloud Computing</p>
+            <p>Autista com Altas Habilidades / Superdotação, <br>Apaixonada por tecnologia e educação inclusiva.</p>
+            <p>Membro da Mensa</p>
+            <p>Mentora de projetos de inclusão digital e sustentabilidade</p>
+            <p>Fundadora do Circuito Verde</p></span>
         </div>
             <div class="tel"><i class="fa"></i></div>
         </div>
@@ -75,10 +86,14 @@
             <div class="line2"></div>
             <div class="center">
                  
-                <div class="nombre animated fadeInLeft"><p>CIR</p><p>CUI</p><p>TO</p></div>
+                <div class="nombre animated fadeInLeft"><p>CIRCUITO</p><p>VERDE</p></div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 <div class="iam animated fadeInLeft" >
-                <span class="ingles" style="font-size: 30px; color: #084622; ">VERDE</span></div>
-                <p>Reciclando ideias, reprogramando o futuro.</p>
+                <span class="ingles" style="font-size: 20px; color: #084622; ">"Reciclando ideias, reprogramando o futuro."</span></div>
+                    
             </div>
         </div>
 
@@ -98,7 +113,7 @@
         O Circuito Verde nasceu para transformar a tecnologia em uma ferramenta de inclusão, aprendizado e cuidado com o planeta.
         <br>
         <br>
-        Promovemos cursos, projetos e iniciativas voltados à educação tecnológica, cultura maker e reaproveitamento criativo de eletrônicos, formando desenvolvedores conscientes 
+        Promovemos cursos, projetos e iniciativas voltados à educação tecnológica, cultura Maker e Steam, reaproveitamento criativo de eletrônicos, formando desenvolvedores conscientes
         e preparados para um mundo mais sustentável.
         <br>
         <br>
@@ -106,8 +121,8 @@
         combater os vieses da tecnologia e democratizar o acesso ao conhecimento.
         <br>
         <br>
-       Nossa missão é expandir as possibilidades da educação com IA acessível e ética, promovendo inclusão digital, 
-       inovação social e consciência ambiental.
+        Nossa missão é expandir as possibilidades da educação com IA acessível e ética, promovendo inclusão digital, 
+        inovação social e consciência ambiental.
         <br>
         <br>
         Nascemos da paixão por ensinar, criar e inovar — e usamos a tecnologia como meio, não como fim, construindo uma plataforma em nuvem aberta, flexível e comprometida com o impacto positivo.</p>
@@ -116,13 +131,17 @@
         <br>
             </div>
         </div>
-
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
         <div class="square" id="second">
             <div class="squareTitleRight">
                 
                 <span class="ingles">Tecnologias</span>
                 
-                <span class="squareSubTitle ingles">Utilizadas</span>
+                <span class="squareSubTitle ingles">plataformas</span>
             </div>
             <div class="squareText show2 hidden " >
                 <div class="habilidades">
@@ -160,8 +179,8 @@
 
                     <div class="habilidad show2 hidden">
                         <div class="habilidadIcon">
-                            FLASK
-                            <img src="{{ url_for('static', filename='flask-original.svg') }}" alt="Flask logo consisting of a stylized blue flask, representing web development technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                            GOOGLE
+                            <img src="{{ url_for('static', filename='google-original.svg') }}" alt="Flask logo consisting of a stylized blue flask, representing web development technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
                         </div>
                         
                     </div>
@@ -189,26 +208,60 @@
                         </div>
                        
                     </div>
+                    <div class="habilidad show2 hidden">
+                        <div class="habilidadIcon">
+                            ARDUINO
+                            <img src="{{ url_for('static', filename='arduino-original.svg') }}" alt="Arduino logo consisting of a stylized blue and yellow infinity symbol, representing open-source hardware technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                        </div>
+                        
+                    </div>
+                     <div class="habilidad show2 hidden">
+                        <div class="habilidadIcon">
+                            VSCODE
+                            <img src="{{ url_for('static', filename='vscode-original.svg') }}" alt="VSCode logo consisting of a stylized blue square with a white play button, representing code editing technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                        </div>
+                        
+                    </div>
+                    <div class="habilidad show2 hidden">
+                        <div class="habilidadIcon">
+                            AZURE
+                            <img src="{{ url_for('static', filename='azure-original.svg') }}" alt="Azure logo consisting of a stylized blue cloud, representing cloud computing technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                        </div>
+                        
+                    </div>
+                    <div class="habilidad show2 hidden">
+                        <div class="habilidadIcon">
+                            AWS
+                            <img src="{{ url_for('static', filename='amazonwebservices-original-wordmark.svg') }}" alt="AWS logo consisting of a stylized orange and black design, representing cloud computing technology. The logo appears bold and modern, conveying a sense of innovation and reliability. No additional text or background elements are present.">
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
-
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
         <div class="square" id="third">
             <div class="squareTitleRight">
                 
                 <span class="ingles">O que você </span>
-                <span class="squareSubTitle">encontra por aqui</span></div>
+                <span class="squareSubTitle">encontrará por aqui</span></div>
             <div class="squareText trabajo show3 hidden">
                 <br>
-        <p class="fontemediun">Em breve:</p>
+        <p class="fontemediun">Em breve no Circuito Verde:</p>
         <br>
-        <p class="fontemediun">&nbsp;&nbsp;🧠 Cursos de tecnologia com foco educacional e ambiental</p>
+        <p class="fontemediun">&nbsp;&nbsp;📚 Cursos de tecnologia com foco educacional e ambiental</p>
         <br>
-        <p class="fontemediun">&nbsp;&nbsp;🔁 Projetos de reutilização de lixo eletrônico com Arduino e IoT</p>
+        <p class="fontemediun">&nbsp;&nbsp;♻️ Projetos de IOT com reutilização de lixo eletrônico usando Arduino</p>
         <br>
         <p class="fontemediun">&nbsp;&nbsp;🧩 Conteúdo acessível para diferentes perfis de aprendizagem</p>
         <br>
-        <p class="fontemediun">&nbsp;&nbsp;🌍 Iniciativas sustentáveis e colaborativas</p>
+        <p class="fontemediun">&nbsp;&nbsp;💡 Espaço colaborativo para troca de idéias com outros educadores e alunos</p>
+        <br>
+        <p class="fontemediun">&nbsp;&nbsp;🛒 Loja virtual colaborativa com produtos sustentáveis</p>
         <br>
         <br>
         <br>
@@ -220,24 +273,34 @@
             </div>
             <div class="squareImage show3 hidden"><img class="image sqljudge" src="{{ url_for('static', filename='note.gif') }}"></div>
         </div>
-
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
         <div class="square" id="fourth">
             <div class="squareTitle"><span class="squareSubTitle">Em desenvolvimento</span></div>
             <div class="squareImage show4 hidden"><img class="image yo ps4" src="{{ url_for('static', filename='engrenagem.png') }}"></div>
             <div class="squareText trabajo show4 hidden">
                     
                     <p class="fontemediun">
-        🔧 Esta plataforma está em construção e será o ponto de partida de uma jornada rumo a uma educação mais consciente, criativa e acessível.
+                    Estamos construindo algo especial!        <br>
         <br>
+        Esta plataforma é o início de uma jornada rumo a uma educação mais consciente, criativa e acessível.
         <br>
-        Enquanto isso, você pode acompanhar as novidades, testar protótipos e colaborar com ideias.
+        Enquanto finalizamos, você já pode acompanhar novidades, testar protótipos e contribuir com suas ideias.
         <br>
+        Fique ligado para o lançamento oficial, onde traremos cursos, projetos e uma comunidade vibrante de educadores e alunos apaixonados por tecnologia.
         <br>
         <br>
                 </p>
             </div>
         </div>
-
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
         <div class="square" id="third">
             <div class="squareTitleRight">
                 
@@ -278,7 +341,11 @@
             </div>
             <div class="squareImage show5 hidden"><img class="image school" src="{{ url_for('static', filename='maker.png') }}"></div>
         </div>
-
+      <div>
+        <br>
+        <br>
+        <br>
+      </div>
         <div class="square" id="comments">
              <div class="squareTitle">
                 
@@ -288,6 +355,7 @@
             </div>
             <div class="squareImage"><img class="image comentario" src="http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/bubble-icon.png"></div>
             <div class="squareText">
+                
 <script>
 var idcomments_acct = '9a1565bb83a858e291267382bdeb97ca';
 var idcomments_post_id;
