--- a/static/css/css.css
+++ b/static/css/css.css
@@ -3,6 +3,12 @@ body{
 	padding: 0;
 }
 
+#IDComment1043383744{
+	display:none;
+}
+
+
+
 .cssa {
 position:fixed; 
 top:140px; 
@@ -65,7 +71,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 }
 
 .toggle-soft .toggle-on{
-	background: #062e17 !important;
+	background: #2ecc71 !important;
 }
 
 .toggle-soft .toggle-off{
@@ -105,7 +111,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 	z-index: 999;
 	background-color: #2ecc71;
 	border-radius: 10px;
-	padding: 1em;
+	padding: .6em;
 	color: white;
 	font-size: calc(0.75em + .5vmin);
   font-family: 'Raleway', sans-serif !important;
@@ -152,7 +158,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 }
 
 .start{
-  background-image:  url("/static/img/floresta.png")!important;
+	background-image: url("https://i.imgur.com/0pTX0Ye.jpg");
   background-size: cover;
 	background-position: center;
 	position: fixed;
@@ -174,8 +180,8 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 	text-align: center;
 	text-shadow: 0px 10px rgba(46, 204, 113,.6);
 	color: white;
-  	font-family: 'Raleway', sans-serif !important;
-  	font-size: 50px;
+  font-family: 'Raleway', sans-serif !important;
+  font-size: calc(5.75em + 5.3vmin);
 	font-weight: bold;
 	animation-delay: 0.5s;
 }
@@ -252,7 +258,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
   transform: translate(-120%, -10%);
 }
 
-/*Parte depois da apresentação*/
+/*PARTE DESPUES DE LA PRESENTACION*/
 
 #first{
 	background-color: #2d2d2d;
@@ -267,7 +273,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 }
 
 .yo{
-	border: 8px solid #2ecc71;
+	border: 12px solid #2ecc71;
 	border-bottom-right-radius: 50%;
 	border-top-left-radius: 50%;
 }
@@ -298,7 +304,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 	border-radius: 5%;
 	padding: .5em;
 	background-color: #fff;
-	border-bottom: 6px solid #2ecc71;
+	border-bottom: 6px solid #2ECC71;
 	margin: .5em;
 	display: inline-block;
 	box-shadow: 0px -0px 2px 1px rgba(45,45,45,.5);
@@ -324,8 +330,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 
 .html{
 	background-color: #F39C12;
-	width: 70%;
-  	
+	width: 80%;
 }
 
 .css{
@@ -376,7 +381,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 }
 
 #fourth{
-	background-color:#2ecc71;
+	background-color: #2ecc71;
 }
 
 #fourth p{
@@ -399,7 +404,7 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 
 
 
-/*CLASSES PRINCIPAIS------------------------*/
+/*CLASES PRINCIPALES------------------------*/
 
 .square{
 	width: 100%;
@@ -412,23 +417,23 @@ background:url('http://www.cssawds.com/ribbons/brand-award-right.png') no-repeat
 	text-align: center;
 	color: #2ecc71;
 	font-family: 'Arvo', serif;
-  	font-size: calc(0.85em + 1.4vmin);
+  font-size: calc(0.85em + 1.4vmin);
 	margin-left: 20%;
 }
 
 .squareSubTitle{
-	color: #e7e8ea;
+	color: #bdc3c7;
 	margin-left: 10px;
 	padding-left: 10px;
 	font-family: 'Raleway', sans-serif;
-	border-left: 2px solid #d8ffff;
+	border-left: 3px solid #bdc3c7;
 }
 
 .squareTitleRight{
 	text-align: center;
 	color: #2ecc71;
 	font-family: 'Arvo', serif;
-  	font-size: calc(0.85em + 1.4vmin);
+  font-size: calc(0.85em + 1.4vmin);
 	margin-right: 20%;
 }
 
@@ -496,6 +501,7 @@ p{
 		left: 0;
 		right: 0;
 		border-radius: 0;
+		transform: translateX(-30px);
 	}
 	
 	.habilidad{
@@ -663,88 +669,4 @@ p{
 
 .fir{
 	border: 0;
-}
-
-button {
-    background-color: #386f60;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #4e8d51;
-}
-footer {
-    background-color: #f0f0f0; /* Cor de fundo clara para visualização */
-    color: #333;
-    padding: 10px;
-    text-align: center;
-    font-size: 0.8em;
-	font: 1em/ 1.25 ubuntu, trebuchet ms, arial, sans-serif;    border-top: 1px solid #ccc;
-    width: 100%;
-    box-sizing: border-box; /* Garante que padding não aumente a largura */
-    margin-top: 30px; /* Adiciona um espaço acima do rodapé */
-}
-.fontemediun {
-	font-size: 18px;	
-}
-
-#scroll-indicator-top {
-  position: fixed;
-  top: 50%;
-  right: 60px;
-  transform: translateY(-50%);
-  z-index: 9999;
-  color: #2ecc71;
-  opacity: 0.8;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 6px;
-}
-
-
-@keyframes pulse {
-  0%, 100% {
-    opacity: 0.4;
-    transform: scale(1);
-  }
-  50% {
-    opacity: 1;
-    transform: scale(1.3);
-  }
-}
-
-#scroll-indicator-top i {
-  animation: pulse 1s infinite;
-  transition: transform 0.3s ease;
-}
-
-#logo-fixa {
-  position: fixed;
-  top: 15px;
-  left: 15px;
-  z-index: 10000;
-}
-
-#logo-fixa img {
-  height: 80px;  /* ou o tamanho que você quiser */
-  width: auto;
-  opacity: 0.95;
-  transition: transform 0.3s ease;
-  border: 2px solid #4CAF50; /* verde escuro ou tom da sua paleta */
-  border-radius: 8px; /* bordas levemente arredondadas */
-  background-color: #111; /* se quiser um fundo sutil */
-  padding: 4px; /* espaçamento entre a borda e a imagem */
-}
-
-
-#logo-fixa img:hover {
-  transform: scale(1.05); /* efeito sutil ao passar o mouse */
 }
