--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
                 
             </div>
             
-            <div class="squareImage show1 hidden"><img class="image school" src="{{ url_for('static', filename='img/logo2.png') }}" style="background-color:white;"></div>
+            <div class="squareImage show1 hidden"><img class="image school" src="{{ url_for('static', filename='img/logo.png') }}" style="background-color:white;"></div>
             <div class="squareText sobreMi show1 hidden">
                 
                 <p class="fontemediun">
