--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                    <a href="#aqui">
                        <i class="fa fa-laptop fa-2x"></i>
                         <span class="nav-text">
-                            O que você encontrará por aqui
+                            O que vai encontrar
                         </span>
                     </a>
                 </li>
