--- a/templates/projetos.html
+++ b/templates/projetos.html
@@ -11,7 +11,7 @@
 <body>
 <div id="logo-fixa">
   <a href="{{ url_for('index') }}">
-    <img src="{{ url_for('static', filename='img/logo2.png') }}" alt="Logo Circuito Verde">
+    <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo Circuito Verde">
   </a>
 </div>
       <div class="nombre animated fadeInLeft"><p><a href="/" style="color: inherit; text-decoration: none;" >PROJETOS</a></p>
