--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -30,7 +30,7 @@
     <header>
       <div id="logo-fixa">
   <a href="{{ url_for('index') }}">
-    <img src="{{ url_for('static', filename='img/logo2.png') }}" alt="Logo Circuito Verde">
+    <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo Circuito Verde">
   </a>
 </div>
 
