--- a/templates/index.html
+++ b/templates/index.html
@@ -526,9 +526,9 @@
 </script>
 
 
-    <footer style="font-size:18px">
-    &copy; Maristela 🐍 🌶️ 2025 | Circuito Verde
-    </footer>
+  <footer style="font-size:18px">
+    &copy; <a href="https://stela.tec.br" target="_blank" rel="noopener noreferrer">Maristela</a> 🐍 🌶️ 2025 | Circuito Verde
+</footer>
     </div>
 
 <!-- partial -->
