--- a/templates/projetos.html
+++ b/templates/projetos.html
@@ -175,9 +175,9 @@ $('li').click(function() {
 
   </script>
   <div class="scrollani">
-    <footer style="font-size:18px ">
-      &copy; Maristela 🐍 🌶️ 2025 | Circuito Verde
-    </footer>
+  <footer style="font-size:18px">
+    &copy; <a href="https://stela.tec.br" target="_blank" rel="noopener noreferrer"> Maristela </a> 🐍 🌶️ 2025 | Circuito Verde
+</footer>
   </div>
 </body>
 </html>
