--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -180,9 +180,9 @@
         </article>
       </section>
     </main>
-    <footer style="font-size:18px">
-    &copy; Maristela 🐍 🌶️ 2025 | Circuito Verde
-    </footer>
+  <footer style="font-size:18px">
+    &copy; <a href="https://stela.tec.br" target="_blank" rel="noopener noreferrer"> Maristela </a> 🐍 🌶️ 2025 | Circuito Verde
+</footer>
     <!-- just support info-->
     <aside>
       <p class="box-info-scrollani">Desculpe, seu navegador não parece suportar animação baseada em rolagem. A partir de janeiro de 2025, isso é suportado no Firefox se a flag <kbd>layout.css.scroll-driven-animations.enabled</kbd> estiver definida como verdadeira em <kbd>about:config</kbd> e em navegadores Chromium. O suporte ao Safari está a caminho, mas ainda não chegou.</p>
