--- a/templates/index.html
+++ b/templates/index.html
@@ -173,13 +173,7 @@
                 <br>
                 <br>
                 
-            <p>Maristela Oliveira <br>Desenvolvedora Full Stack Python</p>
-            <p>Professora de Tecnologia e Cultura Maker</p>
-            <p>Especialista em Educação Tecnológica <br> Inteligência Artificial e Análise de Dados <br> Segurança da Informação <br> Projetos de Cloud Computing</p>
-            <p>Autista com Altas Habilidades / Superdotação, <br>Apaixonada por tecnologia e educação inclusiva.</p>
-            <p>Membro da Mensa</p>
-            <p>Mentora de projetos de inclusão digital e sustentabilidade</p>
-            <p>Fundadora do Circuito Verde</p></span>
+            <p> <a href="https://stela.tec.br" target="_blank" rel="noopener noreferrer">Maristela</a> </p>
         </div>
             <div class="tel"><i class="fa"></i></div>
         </div>
